--- a/css/mc.css
+++ b/css/mc.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0px;
+  margin: 0;
 }
 
 #contents {
@@ -69,7 +69,7 @@ input[type=submit] {
 }
 
 #matrix input {
-  width: 40px;
+  width: 4em;
 }
 
 #graph svg circle {
@@ -114,8 +114,13 @@ input[type=submit] {
   
 #title {
   text-align: left;
-  padding-bottom: 2em;
+  padding-bottom: 1em;
 }
+
+#title h2 {
+  margin: 0;
+}
+
 
 #main {
   display: -webkit-flex;
